feat: simple seo

--- a/index.html
+++ b/index.html
@@ -1,13 +1,74 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/nrc.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- SEO Meta Tags -->
+  <title>Nike Run Club Library - Discover Your Perfect Run</title>
+  <meta name="description"
+    content="Browse and discover guided runs from Nike Run Club. Find your next perfect workout from our curated collection of audio-guided running sessions." />
+  <meta name="keywords"
+    content="Nike Run Club, NRC, running, guided runs, audio workouts, fitness, training, running library" />
+  <meta name="author" content="Nike Run Club Library" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://nrc.tarushnagpal.com" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://nrc.tarushnagpal.com" />
+  <meta property="og:title" content="Nike Run Club Library - Discover Your Perfect Run" />
+  <meta property="og:description"
+    content="Browse and discover guided runs from Nike Run Club. Find your next perfect workout from our curated collection of audio-guided running sessions." />
+  <meta property="og:image" content="https://nrc.tarushnagpal.com/nrc.svg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:site_name" content="Nike Run Club Library" />
+  <meta property="og:locale" content="en_US" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://nrc.tarushnagpal.com" />
+  <meta name="twitter:title" content="Nike Run Club Library - Discover Your Perfect Run" />
+  <meta name="twitter:description"
+    content="Browse and discover guided runs from Nike Run Club. Find your next perfect workout from our curated collection." />
+  <meta name="twitter:image" content="https://nrc.tarushnagpal.com/nrc.svg" />
+  <meta name="twitter:image:alt" content="Nike Run Club Library - Running workouts collection" />
+
+  <!-- Additional SEO -->
+  <meta name="theme-color" content="#2563eb" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-title" content="NRC Library" />
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "Nike Run Club Library",
+    "description": "Browse and discover guided runs from Nike Run Club. Find your next perfect workout from our curated collection of audio-guided running sessions.",
+    "url": "https://nrc.tarushnagpal.com",
+    "applicationCategory": "HealthApplication",
+    "operatingSystem": "Web",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "author": {
+      "@type": "Organization",
+      "name": "Nike Run Club Library"
+    }
+  }
+  </script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
